feat: enhance CORS configuration and enable in application.yml