@@ -1,7 +1,5 @@
 package com.example.userauth.security;
 
-import java.util.Arrays;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -18,6 +16,13 @@ import org.springframework.security.web.authentication.UsernamePasswordAuthentic
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.util.CollectionUtils;
+
+import com.shared.config.SecurityProperties;
+import com.shared.config.SharedLibConfigurationProperties;
+
+import java.util.Arrays;
+import java.util.List;
 
 import com.shared.security.rls.RLSContextFilter;
 import com.shared.security.rls.RLSContextManager;
@@ -45,6 +50,17 @@ public class EnhancedSecurityConfig {
 
     @Autowired
     private InternalApiAuthenticationFilter internalApiAuthenticationFilter;
+
+    @Autowired
+    private SharedLibConfigurationProperties sharedLibProperties;
+
+    private static final List<String> DEFAULT_ALLOWED_ORIGINS = Arrays.asList(
+            "http://localhost:5173",
+            "http://localhost:5174");
+    private static final List<String> DEFAULT_ALLOWED_METHODS = Arrays.asList(
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD");
+    private static final List<String> DEFAULT_ALLOWED_HEADERS = Arrays.asList("*");
+    private static final long DEFAULT_MAX_AGE_SECONDS = 3600L;
 
     @Bean
     public RLSContextManager rlsContextManager(JdbcTemplate jdbcTemplate) {
@@ -119,14 +135,24 @@ public class EnhancedSecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        SecurityProperties.CorsProperties corsProps = sharedLibProperties.getSecurity().getCors();
+        boolean corsEnabled = corsProps.isEnabled();
+
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "http://localhost:5174"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(true);
-        configuration.setMaxAge(3600L);
+        configuration.setAllowedOrigins(corsEnabled && !CollectionUtils.isEmpty(corsProps.getAllowedOrigins())
+                ? corsProps.getAllowedOrigins()
+                : DEFAULT_ALLOWED_ORIGINS);
+        configuration.setAllowedMethods(corsEnabled && !CollectionUtils.isEmpty(corsProps.getAllowedMethods())
+                ? corsProps.getAllowedMethods()
+                : DEFAULT_ALLOWED_METHODS);
+        configuration.setAllowedHeaders(corsEnabled && !CollectionUtils.isEmpty(corsProps.getAllowedHeaders())
+                ? corsProps.getAllowedHeaders()
+                : DEFAULT_ALLOWED_HEADERS);
+        configuration.setExposedHeaders(corsEnabled ? corsProps.getExposedHeaders() : List.of());
+        configuration.setAllowCredentials(corsEnabled ? corsProps.isAllowCredentials() : true);
+        configuration.setMaxAge(corsEnabled && corsProps.getMaxAge() != null
+                ? corsProps.getMaxAge().getSeconds()
+                : DEFAULT_MAX_AGE_SECONDS);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
